--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
     <h1>Shady Mhll</h1>
     <img src="WhatsApp Image 2024-11-04 at 01.03.00_da8ff43c.jpg" alt="">
-    <h2><b>Hello! </b>My name is Shady Mhll</h2>
+    <h2 style="color:blue"><b>Hello! </b>My name is Shady Mhll</h2>
     <h3>I am a <u><b>3D Artist</b></u></h3>
     <p>I have 5 years experience in <b>3D modelling and animating.</b><br>I have 2 years experience in <b>advertising and making ads and ad campaigns.</b></p>
-    <h3>I wirk with Blender, 3Ds Max, Autodisk Autocad</h3>
+    <h3>I work with Blender, 3Ds Max, Autodisk Autocad</h3>
     <p>I have learned basics of the following programing languages:</p>
     <ul>
         <li>CSS</li>
